Add UTF8 file encoding to mesos and yarn
Change-Id: I78016e03b66b80a41dbb6f105af25af652ef7016