@@ -35,6 +35,4 @@ private [clusters] object StandaloneSparkLauncher {
       .setConf("spark.driver.host", clusterConfig.userIP)
       .setConf("spark.executorEnv.PYTHONPATH", config.weDepsPath)
       .setConf("spark.driver.extraClassPath", config.weJarPath)
-      .setConf("spark.driver.extraJavaOptions",
-        "-XX:MaxPermSize=1024m -XX:PermSize=256m -Dfile.encoding=UTF8")
 }
